--- a/passport_authentication/views/signup.ejs
+++ b/passport_authentication/views/signup.ejs
@@ -8,11 +8,11 @@
 <body>
     <form action="/signup" method="POST">
         <label>email</label>
-        <input type="email"><br>
+        <input type="email" name="email"><br>
         <label > username</label>
-        <input type="text"><br>
+        <input type="text" name="username"><br>
         <label>password</label>
-        <input type="password">
+        <input type="password" name="password">
 
         <button type="submit">Signup</button>
     </form>
