Updated passport and login

--- a/passport_authentication/views/login.ejs
+++ b/passport_authentication/views/login.ejs
@@ -9,9 +9,9 @@
     
     <form action="/login" method="POST">
         <label>username</label>
-        <input type="text"><br>
+        <input type="text" name="username"><br>
         <label>password</label>
-        <input type="password">
+        <input type="password" name="password">
         <button type="submit">Login</button>
     </form>
 </body>
