--- a/passport_authentication/views/login.ejs
+++ b/passport_authentication/views/login.ejs
@@ -4,15 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link rel="stylesheet" href="/css/styles.css">
+
 </head>
 <body>
     
-    <form action="/login" method="POST">
+    <!-- <form action="/login" method="POST">
         <label>username</label>
         <input type="text" name="username"><br>
         <label>password</label>
         <input type="password" name="password">
         <button type="submit">Login</button>
+    </form> -->
+
+    <form action="/login" method="POST">
+        
+        <label>
+          <p class="label-txt">ENTER YOUR NAME</p>
+          <input type="text" class="input" name="username">
+          <div class="line-box">
+            <div class="line"></div>
+          </div>
+        </label>
+        <label>
+          <p class="label-txt">ENTER YOUR PASSWORD</p>
+          <input type="text" class="input" name="password">
+          <div class="line-box">
+            <div class="line"></div>
+          </div>
+        </label>
+        <button type="submit">submit</button>
     </form>
+
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </body>
 </html>
