--- a/passport_authentication/views/signup.ejs
+++ b/passport_authentication/views/signup.ejs
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link rel="stylesheet" href="/css/styles.css">
+
 </head>
 <body>
-    <form action="/signup" method="POST">
+    <!-- <form action="/signup" method="POST">
         <label>email</label>
         <input type="email" name="email"><br>
         <label > username</label>
@@ -15,6 +18,34 @@
         <input type="password" name="password">
 
         <button type="submit">Signup</button>
+    </form> -->
+
+    <form action="/signup" method="POST">
+        <label>
+          <p class="label-txt">ENTER YOUR EMAIL</p>
+          <input type="text" class="input" name="email">
+          <div class="line-box">
+            <div class="line"></div>
+          </div>
+        </label>
+        <label>
+          <p class="label-txt">ENTER YOUR NAME</p>
+          <input type="text" class="input" name="username">
+          <div class="line-box">
+            <div class="line"></div>
+          </div>
+        </label>
+        <label>
+          <p class="label-txt">ENTER YOUR PASSWORD</p>
+          <input type="text" class="input" name="password">
+          <div class="line-box">
+            <div class="line"></div>
+          </div>
+        </label>
+        <button type="submit">submit</button>
     </form>
+
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
 </html>
