updated ejs files

--- a/passport_authentication/views/login.ejs
+++ b/passport_authentication/views/login.ejs
@@ -9,14 +9,6 @@
 
 </head>
 <body>
-    
-    <!-- <form action="/login" method="POST">
-        <label>username</label>
-        <input type="text" name="username"><br>
-        <label>password</label>
-        <input type="password" name="password">
-        <button type="submit">Login</button>
-    </form> -->
 
     <form action="/login" method="POST">
         
@@ -29,7 +21,7 @@
         </label>
         <label>
           <p class="label-txt">ENTER YOUR PASSWORD</p>
-          <input type="text" class="input" name="password">
+          <input type="password" class="input" name="password">
           <div class="line-box">
             <div class="line"></div>
           </div>
