--- a/passport_authentication/views/profile.ejs
+++ b/passport_authentication/views/profile.ejs
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
+
+    <link rel="stylesheet" href="/css/profile_styles.css">
 </head>
 <body>
-    <!-- <form action="/profile">
-        <p>Hi!</p>
-        <p>Welcome to your profile!</p>
-    </form> -->
-    <p>Hi!</p>
-    <p>Welcome to your profile!</p>
+    
+    <!-- <p>Hi!</p>
+    <p>Welcome to your profile!</p> -->
+
+    <div class="accordion-wrap">
+        <div class="accordion">
+            <a href="#" class="active"><i class="fa fa-user"></i> Profile</a>
+            <div class="sub-nav active">
+                <div class="html about-me">
+                    <h4>@ <%= user.username %>  </h4>
+                    <p>Hi <%= user.username %>!! This is a simple website built to understand the basics of passportjs.</p>                    
+                </div>
+            </div>            
+        </div>
+    </div>
 </body>
 </html>
