--- a/passport_authentication/views/signup.ejs
+++ b/passport_authentication/views/signup.ejs
@@ -9,16 +9,6 @@
 
 </head>
 <body>
-    <!-- <form action="/signup" method="POST">
-        <label>email</label>
-        <input type="email" name="email"><br>
-        <label > username</label>
-        <input type="text" name="username"><br>
-        <label>password</label>
-        <input type="password" name="password">
-
-        <button type="submit">Signup</button>
-    </form> -->
 
     <form action="/signup" method="POST">
         <label>
@@ -37,7 +27,7 @@
         </label>
         <label>
           <p class="label-txt">ENTER YOUR PASSWORD</p>
-          <input type="text" class="input" name="password">
+          <input type="password" class="input" name="password">
           <div class="line-box">
             <div class="line"></div>
           </div>
