Added redirects b/w login & signup

--- a/passport_authentication/views/signup.ejs
+++ b/passport_authentication/views/signup.ejs
@@ -33,6 +33,10 @@
           </div>
         </label>
         <button type="submit">submit</button>
+
+        <p class="lead mt-4">
+          Already have an account? <a href="/Login">Login</a>
+        </p>
     </form>
 
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
