added login with facebook

--- a/passport_authentication/views/login.ejs
+++ b/passport_authentication/views/login.ejs
@@ -31,6 +31,14 @@
         <p class="lead mt-4">
           No Account? <a href="/signup">signup</a>
         </p>
+
+        <p class="lead mt-4">
+          <a href="/auth/facebook" class="btn btn-dark btn-block"><i class="fab fa-facebook"></i>Login with Facebook</a>
+        </p>
+               
+        <!-- <p class="lead mt-4">
+          <a href="/users/login/google" class="btn btn-dark btn-block">Login with Google</a>
+        </p> -->
     </form>
 
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
